k8s/notification-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      imagePullSecrets:
        - name: image-registry-secret
      containers:
      - name: worker
        image: floriankamaj/my-portfolio-app:worker-cd463c9
