k8s/rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
spec:
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:3-management
        resources:
          limits:
          memory: "64Mi"
          cpu: "100m"
        requests:
          memory: "32Mi"
          cpu: "50m"
        ports:
        - containerPort: 5672
        - containerPort: 15672
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
spec:
  ports:
    - port: 5672
      name: amqp
    - port: 15672
      name: management
  selector:
    app: rabbitmq
